provarAnt/00D190000000ZY2EAM/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Term_Duration_Alpha_all_others__c</fullName>
        <inlineHelpText>Term Duration (1, 2, 3, 6 months)</inlineHelpText>
        <label>Term Duration (1, 2, 3, 6 months)</label>
        <picklist>
            <picklistValues>
                <fullName>1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months (Skyscraper Open Gold only)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Duration_Skyscrapers__c</fullName>
        <inlineHelpText>Term Duration (3, 6, 9, 12 months)</inlineHelpText>
        <label>Term Duration (3, 6, 9, 12 months)</label>
        <picklist>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Duration__c</fullName>
        <label>Term Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Email_Address_KBB_Showcase__c</fullName>
        <inlineHelpText>KBB Showcase Text Email Address</inlineHelpText>
        <label>KBB Showcase Text Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Text_Email_Address__c</fullName>
        <inlineHelpText>LeadDriver Text Email Address</inlineHelpText>
        <label>LeadDriver Text Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Advertised_Make_Feature__c</fullName>
        <inlineHelpText>Featured Advertised Make</inlineHelpText>
        <label>Featured Advertised Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolls-Royce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Co_op_Level_of_Service_Fea__c</fullName>
        <inlineHelpText>Featured Co-op Level of Service</inlineHelpText>
        <label>Featured Co-op Level of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Sequence__c</fullName>
        <inlineHelpText>Vehicle Sequence</inlineHelpText>
        <label>Vehicle Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Sorting__c</fullName>
        <inlineHelpText>Vehicle Sorting</inlineHelpText>
        <label>Vehicle Sorting</label>
        <picklist>
            <picklistValues>
                <fullName>Tier Governor Sorting Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier Governor Use Default Sorting Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Type_Feature__c</fullName>
        <inlineHelpText>Featured Type</inlineHelpText>
        <label>Featured Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Value_Feature__c</fullName>
        <inlineHelpText>Featured Value</inlineHelpText>
        <label>Featured Value</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Vehicle_Monthly_Rate_Featu__c</fullName>
        <inlineHelpText>Featured Vehicle Monthly Rate</inlineHelpText>
        <label>Featured Vehicle Monthly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Vehicle_Quantity_Feature__c</fullName>
        <inlineHelpText>Featured Vehicle Quantity</inlineHelpText>
        <label>Featured Vehicle Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_6_cities_1__c</fullName>
        <inlineHelpText>Top 6 cities where Dealers customers come from: 1</inlineHelpText>
        <label>Top 6 cities: 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_6_cities_2__c</fullName>
        <inlineHelpText>Top 6 cities where Dealers customers come from: 2</inlineHelpText>
        <label>Top 6 cities: 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_6_cities_3__c</fullName>
        <inlineHelpText>Top 6 cities where Dealers customers come from: 3</inlineHelpText>
        <label>Top 6 cities: 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Inventory_New_Used_Certified__c</fullName>
        <label>Total Inventory (New / Used / Certified)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Cost__c</fullName>
        <formula>UnitPrice</formula>
        <label>Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New_Car_Lot_Size__c</fullName>
        <label>Total New Car Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>UnitPrice * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Production_Cost__c</fullName>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Used_Car_Lot_Size__c</fullName>
        <label>Total Used Car Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Training_Headcount__c</fullName>
        <label>Training Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <label>Twitter ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Existing_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Existing_Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Car_Inventory_Source__c</fullName>
        <label>Used Car Inventory Source</label>
        <picklist>
            <picklistValues>
                <fullName>DIRECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds &amp; Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMENET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMDATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARSFORSALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EARTHCARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOUPLINK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBIZAUTOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Inventory Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Whisper_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Call Tracking Whisper</inlineHelpText>
        <label>KBB Showcase Call Tracking Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_Used_KBB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking Used Whisper</inlineHelpText>
        <label>KBB Call Tracking Used Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Whisper</inlineHelpText>
        <label>Call Tracking New Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_new_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking New Whisper</inlineHelpText>
        <label>KBB Call Tracking New Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Whisper</inlineHelpText>
        <label>Call Tracking Used Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XML_Email_Address_KBB_Showcase__c</fullName>
        <inlineHelpText>KBB Showcase XML Email Address</inlineHelpText>
        <label>KBB Showcase XML Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>XML_Email_Address__c</fullName>
        <inlineHelpText>LeadDriver XML Email Address</inlineHelpText>
        <label>LeadDriver XML Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <picklist>
            <controllingField>DMA__c</controllingField>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA_NE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA_NE2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA_NW1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA_NW2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA_SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA_SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSTON_MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSTON_NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSTON_SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSTON_WK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARLOTTE_CHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARLOTTE_CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARLOTTE_HIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO_C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO_C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO_N1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO_N2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO_S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO_S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINCINNATI_EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINCINNATI_SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINCINNATI_WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLEVELAND_NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLEVELAND_NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLEVELAND_SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLEVELAND_SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLUMBUS_OH_EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLUMBUS_OH_WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DALLAS-FT_WORTH_DN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iMR_Opt_In__c</fullName>
        <label>iMR Opt-In</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vAuto_ID__c</fullName>
        <label>vAuto ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>